# redpanda

./: '  .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindCorrosion.cmake  dependencies.cmake  main.cmake  oss.cmake.in  rust_library.cmake
conf/: redpanda.yaml
foo/: go.mod  go.sum  redpandarc.yaml  transform.go
licenses/: third_party.md
src/: CMakeLists.txt  files.txt  tcmalloc.cmake  tcmalloc.patch
src/admin-rpc/: generator.py  pyproject.toml
src/admin-rpc/services/: hello.py
src/admin-rpc/services/base/: __init__.py
src/go/rpk/: go.mod  go.sum
src/go/sdk/: abi.go  doc.go  example_identity_test.go  example_rename_json_fields_test.go  example_validation_test.go  go.mod  guest_callbacks.go  sdk.go  serde_test.go  serialize.go  stub_abi.go
src/go/sdk/sr/: abi.go  client.go  encoding.go  encoding_test.go  schema_registry.go  serde.go  (+2 more)
src/go/transform-sdk/: abi.go  doc.go  example_identity_test.go  example_mirror_test.go  example_regexp_filter_test.go  example_transcoding_test.go  example_validation_test.go  go.mod  go.sum  guest_callbacks.go  processor.go  run_benchmark.sh  sdk.go  serde_test.go  serialize.go  stub_abi.go  wasmedge_test.go
src/go/transform-sdk/internal/testdata/: CMakeLists.txt  build_all.sh  go.mod  identity.wasm  poison-pill.wasm  schema-registry.wasm  setup-panic.wasm  transform-error.wasm  transform-panic.wasm  wasi.wasm
src/go/transform-sdk/internal/testdata/identity/: transform.go
src/go/transform-sdk/internal/testdata/poison-pill/: transform.go
src/go/transform-sdk/internal/testdata/schema-registry/: transform.go
src/go/transform-sdk/internal/testdata/transform-error/: transform.go
src/go/transform-sdk/internal/testdata/transform-panic/: transform.go
src/go/transform-sdk/internal/testdata/wasi/: transform.go
src/go/transform-sdk/internal/testdata/x/: analyze.py  deploy.sh  go.mod  transform.go  transform.yaml
src/go/transform-sdk/internal/testdata/x/tmp/mirror/: go.mod  transform.yaml
src/rust/: CMakeLists.txt  Cargo.toml
src/rust/src/: ffi.cc  ffi.h  lib.rs
src/transform-sdk/cpp/examples/: CMakeLists.txt  app.cc  identity.cc  produce.sh  transform.yaml
src/transform-sdk/cpp/examples/edge-impulse-export/: CMakeLists.txt
src/transform-sdk/cpp/examples/edge-impulse-export/model-parameters/: model_metadata.h  model_variables.h
src/transform-sdk/cpp/examples/edge-impulse-export/tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
src/transform-sdk/cpp/examples/lb/: app  identity_logging_transform  identity_transform
src/v/: CMakeLists.txt
src/v/ai/: service.cc  service.h
src/v/bytes/: iobuf_parser.h
src/v/cluster/: CMakeLists.txt  commands.h  controller.cc  controller.h  controller.json  controller_snapshot.cc  controller_snapshot.h  controller_stm.cc  controller_stm.h  errc.h  fwd.h  health_manager.cc  health_monitor_backend.cc  health_monitor_types.cc  partition.cc  partition.h  partition_manager.cc  partition_manager.h  plugin_backend.cc  plugin_backend.h  plugin_frontend.cc  plugin_frontend.h  plugin_table.cc  plugin_table.h  service.cc  service.h  topics_frontend.cc  topics_frontend.h  types.cc  types.h
src/v/compat/: cluster_json.h
src/v/config/: configuration.cc  configuration.h  node_config.cc  node_config.h
src/v/features/: feature_table.cc  feature_table.h
src/v/kafka/: CMakeLists.txt
src/v/model/: fundamental.h  ktp.h  model.cc  namespace.h  record.h  record_batch_reader.cc  record_batch_reader.h  record_batch_types.h  transform.cc  transform.h
src/v/net/: batched_output_stream.cc  batched_output_stream.h  connection.cc
src/v/pandawasm/: CMakeLists.txt  ast.h  compiler.cc  compiler.h  encoding.h  instruction.cc  instruction.h  intruction.cc  parser.cc  parser.h  stack_validator.cc  stack_validator.h  validator.cc  validator.h  value.cc  value.h
src/v/raft/: replicate_batcher.cc
src/v/redpanda/: CMakeLists.txt  admin_server.cc  admin_server.h  application.cc  application.h  main.cc
src/v/ssx/: CMakeLists.txt  future-util.h  thread_worker.h  work_queue.cc  work_queue.h
src/v/transform/: CMakeLists.txt  api.cc  api.h  fwd.h  io.h  logger.cc  offset_commit_batcher.cc  offset_commit_batcher.h  probe.cc  probe.h  transform_manager.cc  transform_manager.h  transform_processor.cc  transform_processor.h  transform_stm.cc  transform_stm.h
src/v/transform/rpc/: CMakeLists.txt  client.cc  client.h  deps.cc  serde.cc  serde.h  service.cc  service.h
src/v/transform/rpc/tests/: transform_rpc_test.cc
src/v/transform/tests/: CMakeLists.txt  test_fixture.cc  test_fixture.h  transform_manager_test.cc  transform_processor_test.cc
src/v/utils/: CMakeLists.txt  mutex.h  pointer.h  uri.cc  uri.h  utf8.h
src/v/wasm/: CMakeLists.txt  ai_module.cc  ai_module.h  api.cc  api.h  cache.cc  cache.h  errc.h  ffi.cc  ffi.h  fwd.h  probe.cc  probe.h  rp_module.cc  rp_module.h  schema_registry.cc  schema_registry_module.cc  schema_registry_module.h  thread_worker.h  transform_module.cc  transform_module.h  transform_module_v2.cc  transform_module_v2.h  wasi.cc  wasi.h  wasm.cc  wasm.h  wasmedge.cc  wasmedge.h  wasmtime.cc  wasmtime.h
src/v/wasm/tests/: CMakeLists.txt  wasi_test.cc  wasm_fixture.cc  wasm_fixture.h  wasm_setup_trap_test.cc  wasm_transform_error_test.cc  wasm_transform_test.cc  wasm_transform_trap_test.cc
src/v/wasm/tests/testdata/: abi.h  ai_transform.cc  ai_transform.wasm  bang_transform.cc  bang_transform.wasm  build.sh  go.mod  go.sum  golang_identity_transform.wasm  golang_redaction_transform.wasm  identity_transform.cc  identity_transform.go  identity_transform.wasm
src/v/wasm/tests/testdata/cc/: ai_transform.cc  bang_transform.cc  identity_transform.cc
src/v/wasm/tests/testdata/model/: model.go  model_easyjson.go
src/v/wasm/tests/testdata/redaction/: redaction_transform.go
src/v/wasm/tests/testdata/redpanda/: abi.go  abi.h  abi.rs  stub_abi.go
src/v/wasm/tests/testdata/setup_panic/: main.go
src/v/wasm/tests/testdata/transform_error/: main.go
src/v/wasm/tests/testdata/transform_panic/: main.go
tools/: dev_cluster.py  dogfood.py
(+145 files in other folders)
